<resources>
    <string name="app_name">HOTWORX</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="error_failure">Something went wrong. Please try again.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_delete">Are you sure you want to delete this item?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="message_success">Data uploaded successfully!</string>
    <string name="message_success_fav_food_added">Added to Favorite Foods!</string>
    <string name="message_success_fav_food_removed">Removed from Favorite Foods!</string>
    <string name="nl_Otp_pass">Verify Otp</string>
    <string name="nl_Otp_Otp">Verify Your Otp</string>
    <string name="fp_otp_add_the_otp">Add the OTP code sent to your email below</string>
    <string name="facebook_app_id">169710096962791</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="network_internet_connection_error">Internet connection error</string>
    <string name="toast_request_timeout_excetion">Error connecting server please try again</string>
    <string name="content_description"> </string>
    <string name="email_username">Email / Username</string>
    <string name="email_forgot_password">Please enter your email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_item_available">No item available\n</string>
    <string name="login_incomplete_info">Please fill all required data</string>
    <string name="forgot_incomplete_info">Please input your email ID</string>
    <string name="login_sucess">login successfully</string>
    <string name="sucess">success</string>
    <string name="submitted">Submitted</string>
    <string name="sixty_sucess">Calories Recorded</string>
    <string name="home">Dashboard</string>
    <string name="getting_started">Getting Started</string>
    <string name="equipment_tutorial">EQUIPMENT TUTORIAL</string>
    <string name="summary">Calories Burnt Summary</string>
    <string name="just_summary">Summary</string>
    <string name="record_start">Record Starting Calories</string>
    <string name="activity">Activity</string>
    <string name="settings_label">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="hotsquadlist">Hotsquad</string>
    <string name="pending_invite">Pending Invites</string>
    <string name="vi_management">Vi Management</string>
    <string name="passio">Passio</string>
    <string name="Title">Title</string>
    <string name="event_name">Squad Event Name</string>
    <string name="search_name">Search By Phone No,Email</string>
    <string name="descriptionn">Description</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="book_appointments">Book Appointments</string>
    <string name="home_label">Welcome</string>
    <string name="total_session_calories_n_burned">Total Session Calories \n Burned</string>
    <string name="total_session"> Total Sessions</string>
    <string name="workout_calories_burned">Workout Calories Burned</string>
    <string name="_1_hour_after_burn">1 Hour After Burn</string>
    <string name="last_workout_date">Last Workout Date</string>
    <string name="calories_burned">Calories Burned per \n 100 Minute Session</string>
    <string name="start_session">START SESSION</string>
    <string name="view_appointment">VIEW APPOINTMENTS</string>
    <string name="title_activity_begin_session">BeginSessionActivity</string>
    <string name="choose_session">Choose the session that you are about to begin</string>
    <string name="workout">Workout</string>
    <string name="start_workout">Start Workout</string>
    <string name="cancel_workout">Cancel Workout</string>
    <string name="record_calories">Record Calories</string>
    <string name="interNutritionist">Int</string>
    <string name="_40_mins">40 mins</string>
    <string name="Use_trial">Use Trial</string>
    <string name="_1_hour_after_burn_label">1-Hour After Burn</string>
    <string name="_60_mins">60 mins</string>
    <string name="total_">TOTAL SESSION TO RECORD</string>
    <string name="begin_session">BEGIN SESSION</string>
    <string name="title_activity_save_start_calories">SaveStartCaloriesActivity</string>
    <string name="copytitle_activity_save_start_calories">CopySaveStartCaloriesActivity</string>
    <string name="save_start_reading">SAVE START RECORDING</string>
    <string name="starting_calories_reading">Enter Calories Reading</string>
    <string name="date">Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="target_weight_goal_date">Target Weight Goal Date</string>
    <string name="target_weight">Target Weight (Lbs)</string>
    <string name="photo">Photo of Calorie Count</string>
    <string name="_0_cal">0 Cal</string>
    <string name="suana">Sauna#</string>
    <string name="start_calorie_big_text">
        Enter the starting calorie count on your fitness watch,
        which may be 0, or some other number. Upload a photo of the reading on your fitness watch
        with the calorie count that you have entered.
    </string>
    <string name="title_activity_take_photo">TakePhoto</string>
    <string name="take_photo">Take Photo</string>
    <string name="popup_take_photo">
        "HOTWORX" would like to access your camera.
        Allows you to add photos to your calories burned entries.
    </string>
    <string name="review">Review Photo</string>
    <string name="retake">Retake</string>
    <string name="use">Use</string>
    <string name="title_activity_work_out_time">WorkOutTimeActivity</string>
    <string name="work">WORKOUT</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start_timer_forty">START TIMER</string>
    <string name="stop_timer_forty">STOP TIMER</string>
    <string name="personal_detail">Step 01: Personal Details</string>
    <string name="goal_entry">Step 02: Goal Entry</string>
    <string name="set_goals">Set Goals</string>
    <string name="frequently_booking">Frequently booked:</string>
    <string name="location">Location: </string>
    <string name="level_acheived">LEVEL ACHIEVED: </string>
    <string name="level0">0</string>
    <string name="select_location">Select Location:</string>
    <string name="lcoation_name">Demo Location</string>
    <string name="lcoation_description">You are booking an appointment at a premium studio and $10 will be charged at the time of booking would you like to proceed?</string>
    <string name="webview_description">Please enter your payment information to schedule your appointment. Your card will not be charged until you schedule your appointment.</string>
    <string name="session_name">Session</string>
    <string name="session_name2">Session Name: </string>
    <string name="squad_event_name">Squad Event Name: </string>
    <string name="session_typee">Session Type: </string>
    <string name="session_name3">Session Name</string>
    <string name="by_session_type">By Session Type</string>
    <string name="unlock">Unlock</string>
    <string name="by_time">By Time</string>
    <string name="time_slot">Time Slot</string>
    <string name="action">Action</string>
    <string name="available">Available</string>
    <string name="taken">Taken</string>
    <string name="blocked">Blocked</string>
    <string name="sauna">Sauna 01</string>
    <string name="osauna">Sauna: </string>
    <string name="sauna_no">01</string>
    <string name="cal">90k Cal</string>
    <string name="start_time">09:00 PM</string>
    <string name="end_time">12:45 PM</string>
    <string name="full_time">09:00 PM - 12:45 PM</string>
    <string name="month_name">Jan</string>
    <string name="session_time">Session Time</string>
    <string name="month_date">15</string>
    <string name="month_day"></string>
    <string name="confirmation">Confirmation</string>
    <string name="book_slot">Are you sure you want to book this slot</string>
    <string name="level1">level 1</string>
    <string name="level2">level 2</string>
    <string name="level3">level 3</string>
    <string name="level4">level 4</string>
    <string name="level5">level 5</string>
    <string name="level6">level 6</string>
    <string name="level7">level 7</string>
    <string name="progress">90 Days Progress</string>
    <string name="challenge">90 Days Challenge</string>
    <string name="lifetime">LIFETIME ACTIVITY</string>
    <string name="cross_training">Cross Training Balance Breakdown</string>
    <string name="cross_training_balance_ratio">Cross Training Balance Ratio</string>
    <string name="fitness_goal_message">Fitness Goals updated successfully</string>
    <string name="session_breakdown">Session Breakdown</string>
    <string name="vi_device">Vi Devices Management</string>
    <string name="register_device">Register Your Chromebox Device</string>
    <string name="register_device_context">Welcome! To begin managing your Chromebox devices, please register them by following the steps below.</string>
    <string name="unregister_device">Unregister Your Chromebox Device</string>
    <string name="unregister_device_context">To remove a Chromebox device from your management system, please follow the steps below.</string>
    <string name="vi_device_context">The Virtual Instructor Software is the system that runs inside your saunas delivering workouts to your members on schedule, 24/7. Use the VI Device Management module to register your Chromeboxes to the appropriate channels, depending on the sauna number, whether it\'s a lobby TV, or FX Zone tv. Before registering, please make sure your Chromebox is connected to power and wifi.</string>
    <string name="spinner_location">Location</string>
    <string name="spinner_suana">Suana</string>
    <string name="congs">Congratulations!</string>
    <string name="congs_session">Your session has been confirmed!</string>
    <string name="hotsquad_list">HOTSQUAD</string>
    <string name="create_hotsquad">Create hotsquad</string>
    <string name="hotsquad_list_detail">If You don’t have any member in your hotsquad list, click icon to create one</string>
    <string name="Congratulations">Congratulations</string>
    <string name="congrats_text">Your session Invitation Request to Squad Members has been sent!</string>
    <string name="body_fat_percentage">Personal Fitness History</string>
    <string name="thankyou">Thank you</string>
    <string name="isometric_calories">Isometric Calories</string>
    <string name="hit_calories_burn">HIIT Calories Burn</string>
    <string name="devicesetup">Device Setup</string>
    <string name="which_type_of_fitness_tracker_are_you_using">Which type of fitness tracker are you using?</string>
    <string name="dont_have_watch">No Device to Pair</string>
    <string name="apple_watch">Fitbit</string>
    <string name="cancel">CANCEL</string>
    <string name="ytd">ytd</string>
    <string name="today">today</string>
    <string name="mtd">mtd</string>
    <string name="member">Member</string>
    <string name="franchise">Franchise</string>
    <string name="session_small">Session: </string>
    <string name="time_small">Time: </string>
    <string name="location_small">Location: </string>
    <string name="booking_appointment">Book Another Appointment</string>
</resources>