<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/activity"
            android:checked="false"
            android:icon="@drawable/activity_icon"
            android:title="@string/activity" />

        <item
            android:id="@+id/body_fat"
            android:checked="false"
            android:icon="@drawable/bodyfat"
            android:title="@string/body_fat_percentage" />

        <item
            android:id="@+id/leader_board"
            android:checked="false"
            android:icon="@drawable/leaderboard"
            android:title="@string/leaderboard" />

        <item
            android:id="@+id/rewards"
            android:checked="false"
            android:icon="@drawable/rewards"
            android:title="@string/rewards" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/book_appointment"
            android:checked="false"
            android:icon="@drawable/bookings_icon"
            android:title="@string/book_appointments" />

    </group>

</menu>