<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Congratulations"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="@dimen/_16ssp"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/text_color_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congrats_text"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_16ssp"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_9sdp"
            android:textColor="@color/text_color_black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnfinish"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp"
            android:background="@drawable/multicolor_background"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/thankyou"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_9sdp"
            android:fontFamily="@font/montserrat_bold" />

    </LinearLayout>
</layout>