<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_leader_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotsquad_list"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotsquad_list_detail"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/text_color_black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBookSession"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_weight="1"
            android:padding="@dimen/_14sdp"
            android:background="@drawable/multicolor_background"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/create_hotsquad"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/bebasneue_regular" />

    </LinearLayout>

</LinearLayout>
